--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/main.js",
   "scripts": {
-    "start": "forever start src/main.js",
+    "start": "NODE_ENV=production forever start src/main.js",
     "start:dev": "nodemon src/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
