--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/main.js",
   "scripts": {
-    "start": "NODE_ENV=production forever start src/main.js",
+    "start": "node src/main.js",
     "start:dev": "nodemon src/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,7 +24,6 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "forever": "^4.0.1",
     "nodemon": "^2.0.12"
   }
 }
