--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
   "dependencies": {
     "@geolonia/normalize-japanese-addresses": "^2.0.0",
     "@geolonia/open-reverse-geocoder": "^0.0.7",
-    "express": "^4.17.1"
-  },
-  "devDependencies": {
+    "express": "^4.17.1",
     "nodemon": "^2.0.12"
   }
 }
