--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
 	"compilerOptions": {
 		"declaration": true,
 		"outDir": "./dist",
+		"module": "ESNEXT",
+		"moduleResolution": "node",
 		"strict": true
 	}
 }
